# churn-risk-analyzer

./: .dockerignore  .env.example  .gitignore  AI_CONTEXT.md  AI_CONTEXT_PROMPT.md  Dockerfile  INSTRUCTIONS.md  MODEL_USAGE_ANALYSIS.md  NEW_ARCHITECTURE.mermaid  PROJECT_BRIEF.md  README.md  REPO_STRUCTURE.md  agent.py  answer.json  compose.yaml  config.py  debug_agent.py  direct_agent_test.py  docker-compose.yml  env.example  langgraph_agent.ipynb  main.py  n8n_workflow_v2.json  performance_test_output.txt  pyproject.toml  test_performance.py  tools.py
.adk/: session.db
agents/: agent.py  call_transcripts_agent.py  churn_analyzer_agent.py  manager.py  models.py  prompts.py  state_models.py  utils.py
agents/.adk/: session.db
agents/agents/.adk/: session.db
agents/apps/: churn_app.py  manager_app.py  transcript_app.py
agents/tools/: __init__.py  redshift_tools.py
agents/tools/knowledge_files/: competitor_analysis.rtf  database_tables.rtf  filters.rtf  mapping.rtf
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: executor.py  graph.py  planner.py  prompts.py  state.py  utils.py
backend/app/api/: models.py  routes.py
backend/app/tools/: redshift.py
deploy/: build-and-push.sh  ecs-task-definition.json
frontend/: Dockerfile  app.py  index.html  main.py  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx
frontend/static/: chat.js  style.css
frontend/templates/: chat.html  index.html
services/churn/: Dockerfile  pyproject.toml
services/frontend/: Dockerfile  pyproject.toml
services/manager/: Dockerfile  pyproject.toml
services/transcript/: Dockerfile  pyproject.toml
