[project]
name = "churn-risk-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a>=0.44",
    "boto3>=1.42.9",
    "fastapi>=0.123.10",
    "google-adk[a2a]>=1.21.0",
    "httpx>=0.28.1",
    "litellm>=1.80.10",
    "mcp>=1.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]
