[project]
name = "churn-risk-analyzer"
version = "0.3.0"
description = "Multi-agent churn risk analyzer using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LangGraph - for StateGraph orchestration
    "langgraph>=0.2.38",
    
    # LangChain - for prompts, chains, structured output
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",  # ChatBedrockConverse
    
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    
    # Data validation & config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
]
