[project]
name = "stampli-churn-analyzer-backend"
version = "0.1.0"
description = "Backend service for Stampli Churn Risk Analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langgraph>=0.0.10",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy-redshift>=0.8.14",
    "python-dotenv>=1.0.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
