[project]
name = "manager-service"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.38",
    "langchain-aws>=0.2.0",
    "httpx>=0.28.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
]

